Codigo optmizado